container wrap, small breakpoint fix

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -36,7 +36,7 @@ li{
 
 .container{
   padding: 80px 20px;
-  width: 300px;
+  width: 280px;
   margin: 0 auto;
 
   @media only screen and (min-width: 640px){
